--- a/Date.html
+++ b/Date.html
@@ -6,26 +6,24 @@
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Monoton|Orbitron|Press+Start+2P|VT323" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>Standard Clock</title>
+    <title>Date</title>
 </head>
 <body>
     <div class="slider">
-        <h1 class="arrow">> Time</h1>
+        <h1 class="arrow">> Date </h1>
         <div class="menu">
-            <h1><a href="24-Hour.html">24-Hour Time</a></h1>
-            <h1><a href="Date.html">Date</a></h1>
             <h1><a>Timer</a></h1>
             <h1><a>Stopwatch</a></h1>
+            <h1><a href="Standard-clock.html">Time</a></h1>
+            <h1><a href="24-Hour.html">24-Hour Time</a></h1>
         </div>
     </div>
+
     <div class="main">
-        <h1>The Current Time Is </h1>
-        <h2 class="clockface"></h2>
+        <h1>The Current Date is</h1>
+        <h2 class="datedisplay"></h2>
     </div>
-    
-
-
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="js-stdclock.js"></script>
+    <script src="js-date.js"></script>
 </body>
 </html>
