--- a/Date.html
+++ b/Date.html
@@ -13,7 +13,7 @@
         <h1 class="arrow">> Date </h1>
         <div class="menu">
             <h1><a>Timer</a></h1>
-            <h1><a>Stopwatch</a></h1>
+            <h1><a href="Stopwatch.html">Stopwatch</a></h1>
             <h1><a href="Standard-clock.html">Time</a></h1>
             <h1><a href="24-Hour.html">24-Hour Time</a></h1>
         </div>
