--- a/24-Hour.html
+++ b/24-Hour.html
@@ -14,7 +14,7 @@
         <div class="menu">
             <h1><a href="Date.html">Date</a></h1>
             <h1><a>Timer</a></h1>
-            <h1><a>Stopwatch</a></h1>
+            <h1><a href="Stopwatch.html">Stopwatch</a></h1>
             <h1><a href="Standard-clock.html">Time</a></h1>
         </div>
     </div>
