--- a/HTML/Standard-Clock.html
+++ b/HTML/Standard-Clock.html
@@ -5,25 +5,27 @@
     <meta charset="utf-8" />
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Monoton|Orbitron|Press+Start+2P|VT323" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>Date</title>
+    <link rel="stylesheet" type="text/css" href="../CSS/style.css" />
+    <title>Standard Clock</title>
 </head>
 <body>
     <div class="slider">
-        <h1 class="arrow">> Date </h1>
+        <h1 class="arrow">> Time</h1>
         <div class="menu">
+            <h1><a href="24-Hour.html">24-Hour Time</a></h1>
+            <h1><a href="Date.html">Date</a></h1>
             <h1><a>Timer</a></h1>
             <h1><a href="Stopwatch.html">Stopwatch</a></h1>
-            <h1><a href="Standard-clock.html">Time</a></h1>
-            <h1><a href="24-Hour.html">24-Hour Time</a></h1>
         </div>
     </div>
-
     <div class="main">
-        <h1>The Current Date is</h1>
-        <h2 class="datedisplay"></h2>
+        <h1>The Current Time Is </h1>
+        <h2 class="clockface"></h2>
     </div>
+    
+
+
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="js-date.js"></script>
+    <script src="../Javascript/js-stdclock.js"></script>
 </body>
 </html>
