--- a/HTML/Timer.html
+++ b/HTML/Timer.html
@@ -21,13 +21,13 @@
     <div class="main">
         <h1 id="start-title">Click on Start to Begin</h1>
         <div class="buttonArrowT">
-            <h2 class="button">^</h2>
-            <h2 class="button">^</h2>
+            <h2 class="button" id="minTop">^</h2>
+            <h2 class="button" id="secTop">^</h2>
         </div>
         <h2 class="timerface">00:00</h2>
         <div class="buttonArrowB">
-            <h2 class="button">v</h2>
-            <h2 class="button">v</h2>
+            <h2 class="button" id="minBot">v</h2>
+            <h2 class="button" id="secBot">v</h2>
         </div>
         <h2 class="button" id="start">Start</h2>
     </div>
