Completed Timer and Reformated Text

--- a/HTML/24-Hour.html
+++ b/HTML/24-Hour.html
@@ -13,7 +13,7 @@
         <h1 class="arrow">> 24-Hour Time</h1>
         <div class="menu">
             <h1><a href="Date.html">Date</a></h1>
-            <h1><a>Timer</a></h1>
+            <h1><a href="Timer.html">Timer</a></h1>
             <h1><a href="Stopwatch.html">Stopwatch</a></h1>
             <h1><a href="Standard-clock.html">Time</a></h1>
         </div>
