--- a/HTML/Date.html
+++ b/HTML/Date.html
@@ -12,7 +12,7 @@
     <div class="slider">
         <h1 class="arrow">> Date </h1>
         <div class="menu">
-            <h1><a>Timer</a></h1>
+            <h1><a href="Timer.html">Timer</a></h1>
             <h1><a href="Stopwatch.html">Stopwatch</a></h1>
             <h1><a href="Standard-clock.html">Time</a></h1>
             <h1><a href="24-Hour.html">24-Hour Time</a></h1>
