--- a/HTML/Standard-Clock.html
+++ b/HTML/Standard-Clock.html
@@ -14,7 +14,7 @@
         <div class="menu">
             <h1><a href="24-Hour.html">24-Hour Time</a></h1>
             <h1><a href="Date.html">Date</a></h1>
-            <h1><a>Timer</a></h1>
+            <h1><a href="Timer.html">Timer</a></h1>
             <h1><a href="Stopwatch.html">Stopwatch</a></h1>
         </div>
     </div>
@@ -23,6 +23,9 @@
         <h2 class="clockface"></h2>
     </div>
     
+    <div class="message">
+        <h2>Sup</h2>
+    </div>
 
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
