--- a/HTML/Stopwatch.html
+++ b/HTML/Stopwatch.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Monoton|Orbitron|Press+Start+2P|VT323" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../CSS/style.css" />
     <title>Stopwatch</title>
 </head>
@@ -16,13 +17,13 @@
             <h1><a href="Standard-clock.html">Time</a></h1>
             <h1><a href="24-Hour.html">24-Hour Time</a></h1>
             <h1><a href="Date.html">Date</a></h1>
-            <h1><a>Timer</a></h1>
+            <h1><a href="Timer.html">Timer</a></h1>
         </div>
     </div>
 
     <div class="main">
         <h1 id="start-title">Click on Start to Begin</h1>
-        <h2 class="timerface"></h2>
+        <h2 class="clockface"></h2>
         <h2 class="button" id="start">Start</h2>
     </div>
 
@@ -32,8 +33,8 @@
             <h2 class="button" id="lap">Lap</h2>
         </div>
     </div>
-    <div class="laps">
 
+    <div class="laps">
     </div>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="../Javascript/js-stopwatch.js"></script>
