--- a/HTML/Timer.html
+++ b/HTML/Timer.html
@@ -5,17 +5,23 @@
     <meta charset="utf-8" />
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Monoton|Orbitron|Press+Start+2P|VT323" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../CSS/style.css" />
     <title>Timer</title>
 </head>
 <body>
+    <audio id="myAudio">
+        <source src="../Javascript/alarm.wav" type="audio/wav">
+        Your browser does not support the audio element.
+    </audio>
+
     <div class="slider">
-        <h1 class="arrow">> Stopwatch</h1>
+        <h1 class="arrow">> Timer</h1>
         <div class="menu">
+            <h1><a href="Stopwatch.html">Stopwatch</a></h1>
             <h1><a href="Standard-clock.html">Time</a></h1>
             <h1><a href="24-Hour.html">24-Hour Time</a></h1>
             <h1><a href="Date.html">Date</a></h1>
-            <h1><a>Timer</a></h1>
         </div>
     </div>
     <div class="main">
@@ -30,6 +36,9 @@
             <h2 class="button" id="secBot">v</h2>
         </div>
         <h2 class="button" id="start">Start</h2>
+        <div id="reset">
+            <h2 class="button">Reset</h2>
+        </div>
     </div>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="../Javascript/js-timer.js"></script>
